--- a/contest_2019.vcxproj
+++ b/contest_2019.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="lambda_test.cpp" />
     <ClCompile Include="list_test.cpp" />
     <ClCompile Include="memory_leaker.cpp" />
+    <ClCompile Include="move_test.cpp" />
     <ClCompile Include="smart_pointer.cpp" />
     <ClCompile Include="smart_pointer_test.cpp" />
     <ClCompile Include="string_test.cpp" />
