--- a/contest_2019.vcxproj.filters
+++ b/contest_2019.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="item_26_avoid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="item_10_enum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Timer.hpp">
