--- a/contest_2019.vcxproj
+++ b/contest_2019.vcxproj
@@ -153,7 +153,9 @@
   <ItemGroup>
     <ClCompile Include="contest_2019.cpp" />
     <ClCompile Include="forward.cpp" />
+    <ClCompile Include="Item1_template_deduce.cpp" />
     <ClCompile Include="item_26_avoid.cpp" />
+    <ClCompile Include="item_2_auto.cpp" />
     <ClCompile Include="lambda_test.cpp" />
     <ClCompile Include="list_test.cpp" />
     <ClCompile Include="memory_leaker.cpp" />
