--- a/contest_2019.vcxproj
+++ b/contest_2019.vcxproj
@@ -152,6 +152,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="contest_2019.cpp" />
+    <ClCompile Include="da_lazy_test.cpp" />
+    <ClCompile Include="da_moreparam.cpp" />
+    <ClCompile Include="da_option_test.cpp" />
     <ClCompile Include="forward.cpp" />
     <ClCompile Include="item_10_enum.cpp" />
     <ClCompile Include="item_16_const_member.cpp" />
@@ -163,6 +166,7 @@
     <ClCompile Include="memory_leaker.cpp" />
     <ClCompile Include="move_test.cpp" />
     <ClCompile Include="result_of_test.cpp" />
+    <ClCompile Include="rvalue_test.cpp" />
     <ClCompile Include="smart_pointer.cpp" />
     <ClCompile Include="smart_pointer_test.cpp" />
     <ClCompile Include="string_test.cpp" />
@@ -170,6 +174,8 @@
     <ClCompile Include="type_traits_test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Lazy.hpp" />
+    <ClInclude Include="optional.hpp" />
     <ClInclude Include="stl_header.h" />
     <ClInclude Include="Timer.hpp" />
     <ClInclude Include="Widget.h" />
