--- a/contest_2019.vcxproj.filters
+++ b/contest_2019.vcxproj.filters
@@ -66,6 +66,18 @@
     <ClCompile Include="result_of_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="da_option_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="da_moreparam.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rvalue_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="da_lazy_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stl_header.h">
@@ -75,6 +87,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Widget.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="optional.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lazy.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
