--- a/contest_2019.vcxproj.filters
+++ b/contest_2019.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="da_second.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="char_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stl_header.h">
