--- a/contest_2019.vcxproj
+++ b/contest_2019.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="char_test.cpp" />
     <ClCompile Include="contest_2019.cpp" />
+    <ClCompile Include="da_5_thread.cpp" />
     <ClCompile Include="da_lazy_test.cpp" />
     <ClCompile Include="da_moreparam.cpp" />
     <ClCompile Include="da_option_test.cpp" />
