--- a/contest_2019.vcxproj.filters
+++ b/contest_2019.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="char_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="da_5_thread.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stl_header.h">
