--- a/contest_2019.vcxproj
+++ b/contest_2019.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="char_test.cpp" />
     <ClCompile Include="contest_2019.cpp" />
+    <ClCompile Include="da_5_condition_variable.cpp" />
     <ClCompile Include="da_5_thread.cpp" />
     <ClCompile Include="da_lazy_test.cpp" />
     <ClCompile Include="da_moreparam.cpp" />
@@ -183,6 +184,7 @@
     <ClInclude Include="NonCopyable.hpp" />
     <ClInclude Include="ObjectPool.hpp" />
     <ClInclude Include="optional.hpp" />
+    <ClInclude Include="SimpleSyncQueue.hpp" />
     <ClInclude Include="stl_header.h" />
     <ClInclude Include="Timer.hpp" />
     <ClInclude Include="type_name.h" />
